--- a/BlazorApp2/Client/Pages/TeamCreator.razor
+++ b/BlazorApp2/Client/Pages/TeamCreator.razor
@@ -4,28 +4,31 @@
 @inject NavigationManager NavigationManager
 @inject Blazored.LocalStorage.ILocalStorageService localStorage
 
-<h3>TeamCreator</h3>
+<h3>Create a new Team</h3>
 
-<EditForm Model="@teamModel" OnValidSubmit="@CreateTeamAsync">
-    <DataAnnotationsValidator />
-    <ValidationSummary />
-    <label for="name">Team Name</label>
-    <InputText class="form-control" id="name" @bind-Value="teamModel.TeamName" />
-    <label for="bio">Team Bio</label>
-    <InputTextArea class="form-control" id="bio" @bind-Value="teamModel.TeamBio" />
-    <label for="city">City</label>
-    <InputSelect class="form-control" id="city" @bind-Value="teamModel.TeamCityId">
-        <option value="">Please Select A Home City For This Team</option>
-        @foreach (var c in cityInfos)
-        {
-            <option value="@c.CityId">@c.City</option>
-        }
-    </InputSelect>
-    <label for="teampic">Team Profile Picture</label>
-    <InputFile class="form-control" id="teampic" OnChange="@OnInputFileChange"></InputFile>
-    <img id="profilepic" src="@imageDataUri" />
-    <button class="button button-primary form-control" type="submit">Submit</button>
-</EditForm>
+    <EditForm Model="@teamModel" OnValidSubmit="@CreateTeamAsync">
+        <DataAnnotationsValidator />
+        <ValidationSummary />
+        <label for="name">Team Name</label>
+        <InputText class="form-control" id="name" @bind-Value="teamModel.TeamName" />
+        <label for="bio">Team Bio</label>
+        <InputTextArea class="form-control" id="bio" @bind-Value="teamModel.TeamBio" />
+        <label for="city">City</label>
+        <InputSelect class="form-control" id="city" @bind-Value="teamModel.TeamCityId">
+            <option value="">Please Select A Home City For This Team</option>
+            @foreach (var c in cityInfos)
+                {
+                <option value="@c.CityId">@c.City</option>
+                }
+        </InputSelect>
+        <label for="teampic">Team Profile Picture</label>
+        <InputFile class="form-control" id="teampic" OnChange="@OnInputFileChange"></InputFile>
+        <img id="profilepic" src="@imageDataUri" />
+        <button class="button button-primary form-control" type="submit">Submit</button>
+    </EditForm>
+
+
+
 
 @code {
     string guidstring = string.Empty;
@@ -33,7 +36,7 @@
     IEnumerable<CityInfo> cityInfos = new CityInfo[0];
     string format = "image/png";
     string imageDataUri = "";
-
+   
 
     protected override async Task OnInitializedAsync()
     {
