--- a/BlazorApp2/Client/Pages/Index.razor
+++ b/BlazorApp2/Client/Pages/Index.razor
@@ -11,29 +11,31 @@
 
 @if (debug)
 {
-    <h1>Welcome @myInfo.MyName</h1>
-    <img id="profilepic" src="@imageDataUri" />
-    <p>
-        Your Bio: @myInfo.MyBio
-    </p>
-    <h1>@debug</h1>
-    <h3>You are here</h3>
-    <div class="container">
-        Lat: @location?.Latitude <br />
-        Long: @location?.Longitude <br />
-        Accuracy: @location?.Accuracy <br />
+    <div class="container-fluid">
+        <h1>Welcome @myInfo.MyName</h1>
+        <img id="profilepic" src="@imageDataUri" class="img-fluid float-right" />
+        <p>
+            Your Bio: @myInfo.MyBio
+        </p>
+        <h3>You are here</h3>
+        <div class="container">
+            Lat: @location?.Latitude <br />
+            Long: @location?.Longitude <br />
+            Accuracy: @location?.Accuracy <br />
 
-    </div>
-    <h3>Your city info</h3>
-    <div class="container">
-        Country: @closestCity?.Country <br />
-        State: @closestCity?.Admin_name <br />
-        City: @closestCity?.City <br />
-        My Team: @myInfo.TeamName <br />
+        </div>
+        <h3>Your city info</h3>
+        <div class="container">
+            Country: @closestCity?.Country <br />
+            State: @closestCity?.Admin_name <br />
+            City: @closestCity?.City <br />
+            My Team: @myInfo.TeamName <br />
 
+        </div>
     </div>
-    <div class="container">
-        <button @onclick="PickATeam" class="btn btn-primary" href="/teampicker" role="button" disabled="@teambuttondisabled">Pick a Team</button>
+   
+    <div class="container-fluid float-right">
+        <button @onclick="PickATeam" class="btn btn-primary float-right" href="/teampicker" role="button" disabled="@teambuttondisabled">Pick a Team</button>
     </div>
 
 
@@ -92,15 +94,16 @@
             <div class="form-group">
                 <label for="teampic">Team Profile Picture</label>
                 <InputFile class="form-control" id="teampic" OnChange="@TeamPicChange"></InputFile>
-                
-                    <img id="profilepic" src="@tm.TeamImageURI" />
-               
+
+                <img id="profilepic" src="@tm.TeamImageURI" />
+
 
             </div>
 
 
             <button class="btn btn-primary" type="submit">Submit</button>
         </EditForm>
+
     }
 }
 else
@@ -128,8 +131,8 @@ else
     protected override async Task OnInitializedAsync()
     {
 #if DEBUG
-      
-        await Task.Delay(5000);
+
+        //await Task.Delay(5000);
 #endif
         location = await LocationService.GetLocationAsync();
         guidstring = await localStorage.GetItemAsync<string>("guid");
