--- a/BlazorApp2/Client/Shared/NavMenu.razor
+++ b/BlazorApp2/Client/Shared/NavMenu.razor
@@ -27,6 +27,11 @@
                 <span class="oi oi-star" aria-hidden="true"></span> Create Team
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="messagesinbox">
+                <span class="oi oi-chat" aria-hidden="true"></span> Messages
+            </NavLink>
+        </li>
     </ul>
 </div>
 
