--- a/BlazorApp2/Client/Pages/Profile.razor
+++ b/BlazorApp2/Client/Pages/Profile.razor
@@ -37,6 +37,7 @@
                 </a>
             }
         </li>
+        <li class="list-group-item"><a href="/messagerugger/@Id">Message</a></li>
     </ul>
 </div>
 
