--- a/BlazorApp2/Client/Pages/Index.razor
+++ b/BlazorApp2/Client/Pages/Index.razor
@@ -12,7 +12,10 @@
 @if (debug)
 {
     <div class="container-fluid">
-        <h1>Welcome @myInfo.MyName</h1>
+        <h1>Welcome</h1><h2> @myInfo.MyName</h2>
+        <p class="alert-primary">
+
+        </p>
         <img id="profilepic" src="@imageDataUri" class="img-fluid float-right" />
         <p>
             Your Bio: @myInfo.MyBio
