--- a/BlazorApp2/Client/Pages/Teampicker.razor
+++ b/BlazorApp2/Client/Pages/Teampicker.razor
@@ -29,7 +29,7 @@
 
 
 @code {
-    MyInfo myInfo = new MyInfo() { MyBio = string.Empty, TeamId = Guid.Empty, TeamName = string.Empty, MyName = string.Empty };
+    MyInfo myInfo = new MyInfo();
     string guidstring = string.Empty;
     IEnumerable<TeamModel> closestTeams = new TeamModel[0];
     Guid selectedTeam = Guid.Empty;
