--- a/BlazorApp2/Client/Pages/TeamCreator.razor
+++ b/BlazorApp2/Client/Pages/TeamCreator.razor
@@ -14,7 +14,7 @@
         <label for="bio">Team Bio</label>
         <InputTextArea class="form-control" id="bio" @bind-Value="teamModel.TeamBio" />
         <label for="city">City</label>
-        <InputSelect class="form-control" id="city" @bind-Value="teamModel.TeamCityId">
+        <InputSelect class="form-control" id="city" @bind-Value="teamModel.City.CityId">
             <option value="">Please Select A Home City For This Team</option>
             @foreach (var c in cityInfos)
                 {
@@ -45,7 +45,7 @@
     }
     async Task CreateTeamAsync()
     {
-        if (teamModel.TeamCityId != 0)
+        if (teamModel.City.CityId != 0)
         {
             teamModel.TeamId = Guid.NewGuid();
             teamModel.RuggerOwner = Guid.Parse(guidstring);
