--- a/BlazorApp2/Client/Pages/Index.razor
+++ b/BlazorApp2/Client/Pages/Index.razor
@@ -4,7 +4,7 @@
 @inject HttpClient Http
 @inject NavigationManager NavigationManager
 @inject Blazored.LocalStorage.ILocalStorageService localStorage
-
+@inject IJSRuntime JS
 
 @page "/"
 
@@ -33,7 +33,7 @@
 
         </div>
     </div>
-   
+
     <div class="container-fluid float-right">
         <button @onclick="PickATeam" class="btn btn-primary float-right" href="/teampicker" role="button" disabled="@teambuttondisabled">Pick a Team</button>
     </div>
@@ -103,7 +103,12 @@
 
             <button class="btn btn-primary" type="submit">Submit</button>
         </EditForm>
-
+        <div class="@UpdateAvailable alert alert-warning alert-dismissible fade show" role="alert">
+            <strong>New update</strong> Please rstart the app
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
     }
 }
 else
@@ -127,12 +132,13 @@ else
     bool teambuttondisabled = true;
     TeamPostModel tm = new TeamPostModel();
     IEnumerable<CityInfo> cityInfos = new CityInfo[0];
+    public string UpdateAvailable { get; set; } = "d-none";
 
     protected override async Task OnInitializedAsync()
     {
 #if DEBUG
 
-        //await Task.Delay(5000);
+        await Task.Delay(5000);
 #endif
         location = await LocationService.GetLocationAsync();
         guidstring = await localStorage.GetItemAsync<string>("guid");
@@ -168,8 +174,11 @@ else
         }
         tm = await Http.GetFromJsonAsync<TeamPostModel>($"teamowner/{guid}");
         cityInfos = await Http.GetFromJsonAsync<IEnumerable<CityInfo>>($"City/{guidstring}");
-        debug = true;
-
+        var iua = await JS.InvokeAsync<bool>("isUpdateAvailable");
+        if (iua)
+        {
+            UpdateAvailable = string.Empty;
+        }
     }
     private async Task UpdateNameAsync()
     {
@@ -218,5 +227,4 @@ else
         tm.TeamPic = buffer;
         var x = (tm.TeamImageURI == $"data:{format};base64,{Convert.ToBase64String(buffer)}");
     }
-
 }
