--- a/BlazorApp2/Client/Pages/Teampicker.razor
+++ b/BlazorApp2/Client/Pages/Teampicker.razor
@@ -7,7 +7,7 @@
 
 
 <div class="container">
-    <h3>Teampicker</h3>
+    <h3>Pick a Team</h3>
     <EditForm Model="@selectedTeam" OnValidSubmit="@UpdateTeam">
         <DataAnnotationsValidator />
         <ValidationSummary />
