--- a/BlazorApp2/Client/Pages/Index.razor
+++ b/BlazorApp2/Client/Pages/Index.razor
@@ -100,7 +100,7 @@
 
 
 <div class="@UpdateAvailable alert alert-warning alert-dismissible fade show" role="alert">
-    <strong>New update</strong> Please rstart the app
+    <strong>New update</strong> Please restart the app
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
         <span aria-hidden="true">&times;</span>
     </button>
