Change name of function, reload service broker no matter what

--- a/BlazorApp2/Client/Pages/Index.razor
+++ b/BlazorApp2/Client/Pages/Index.razor
@@ -174,8 +174,7 @@
         }
         tm = await Http.GetFromJsonAsync<TeamPostModel>($"teamowner/{guid}");
         cityInfos = await Http.GetFromJsonAsync<IEnumerable<CityInfo>>($"City/{guidstring}");
-        var iua = await JS.InvokeAsync<bool>("testStuff");
-   
+        var iua = await JS.InvokeAsync<bool>("CheckWaitingServiceWorker");
         if (iua)
         {
             UpdateAvailable = "";
